<resources>
    <string name="app_name">SESHealthPatient</string>
    <string name="username_txt">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="login_activity_title">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient_information">Patient Information</string>
    <string name="create_data_packet">Create Data Packet</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="record_video">Record Video</string>
    <string name="send_local_file">Send Local File</string>
    <string name="facilities_map">Facilities Map</string>
    <string name="doctor">Doctor Page</string>

    <string name="dialog_message">Do you want to choose this doctor?</string>
    <string name="positive_button">Confirm</string>
    <string name="negative_button">Cancel</string>
    <string name="simple_dialog">Confirm Message</string>
    <string name="toast_positive">You have successfully sent your invitation, just waiting for response!</string>
    <string name="toast_negative">Cancel</string>

    <string name="dialog_request_message">Do you want to accept this invitation?</string>
    <string name="toast_request_positive">You have accepted this patient.</string>
    <string name="toast_request_negative">You have refused this patient.</string>
    <string name="positive_request_button">Accept</string>
    <string name="negative_request_button">Refuse</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="age">age: </string>
    <string name="name">Name: </string>

    <string name="selected_file">A file is selected: %1$s</string>
    <string name="toastmessage">You have not choosed a doctor!</string>

    <array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </array>

    <string name="heartbeat">Heart Rate</string>
    <string name="default_text">000</string>
    <string name="unit">bpm</string>
    <string name="instruct">Gently place the tip of your finger on the camera to completely covers the lens.
It is not necessary to cover the flash. Hold your phone steady.</string>
    <string name="ideal_range">☺︎Ideal Resting Heartbeat Range</string>
    <string name="ideal_range_num">60 to 100 bpm</string>
    <string name="warning">Following ways can affect the accuracy of measurements</string>
    <string name="warning1">▹▹Pressing too hard on the lens</string>
    <string name="warning2">▹▹In poor lighting conditions</string>
    <string name="title_activity_view_upload">ViewUploadActivity</string>
    <string name="title_activity_doctor_main">Doctor</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="doctornone">"You have not choosed a doctor."</string>
    <string name="requestwaiting">"Your invitation has been checking..."</string>
    <string name="requestaccepted">"Here is your doctor, you can send him you own datapacket."</string>
    <string name="requestrefuesed">"You invitation has been refused. Please try again or choose other doctors."</string>
</resources>
