<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group2.seshealthpatient.Fragments.HeartRateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:src="@drawable/heart" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="28dp"
                android:text="@string/heartbeat"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:src="@drawable/heart" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="489dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bkgd_corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="488dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="#INSTRUCTIONS#"
                    android:textColor="@color/whiteColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="142sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/instruct"
                    android:textColor="@color/whiteColor"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_edge"
                    android:gravity="center"
                    android:text="@string/ideal_range"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_edge"
                    android:gravity="center"
                    android:text="@string/ideal_range_num"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="#KIND REMIND#"
                    android:textColor="@color/whiteColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/warning"
                    android:textColor="@color/whiteColor"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/warning1"
                    android:textColor="@color/whiteColor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/warning2"
                    android:textColor="@color/whiteColor"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/MeasurehbBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Start Measuring"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>
